- SI l'utilisateur duplique une réservation, un status de 409 est renvoyé - Suppression des tags JPA @Query pour les remplacer par des noms de métodes explicites - Normalisation des controleurs pour qu'ils retournent tous une ResponseEntity - Suppression des imports inutiles